--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
 <head>
   <title>Foxcraft Financial</title>
   <link rel="stylesheet" href="main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
   <header>
-    <div>
-      <!-- Add your logo or branding image here -->
-      <h1 style="color: #333;">Foxcraft Financial Coaching and Advising</h1>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-        <li><a href="#contact">Contact</a></li>
-          <li><a href="blog-page.html">Blog</a></li>
+  <div>
+    <!-- Add your logo or branding image here -->
+    <h1>Foxcraft Financial Coaching and Advising</h1>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#pricing">Pricing</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="blog-page.html">Blog</a></li>
     </ul>
-      </ul>
-    </nav>
-  </header>
+  </nav>
+</header>
+
 
   <section id="about" style="background-color: #333;">
   <div class="about-description narrow">
