--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
+    <link rel="icon" href="vector-logo.ico" type="image/x-icon">
+
 <body>
   <header>
   <div>
-    <!-- Add your logo or branding image here -->
+    <!-- <img src="vector-logo.png" alt="Foxcraft Financial Logo"> -->
     <h1>Foxcraft Financial Coaching and Advising</h1>
   </div>
   <nav>
