--- a/basic-package.html
+++ b/basic-package.html
@@ -2,147 +2,24 @@
 <html>
 <head>
   <title>Foxcraft Financial - Basic Package</title>
-  <link rel="stylesheet" href="main.css">
-  <style>
-    /* Add your custom styles here */
-    body {
-      background-color: #000;
-      color: #FFF;
-      font-family: Arial, sans-serif;
-    }
-
-    header {
-      background-color: #F9A825;
-      padding: 20px;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 24px;
-      margin: 0;
-    }
-
-   
-
-    #package-details {
-      padding: 50px;
-      text-align: center;
-    }
-
-    #package-details h2 {
-      color: #F9A825;
-      font-size: 32px;
-      margin-bottom: 20px;
-    }
-
-    .package-detail {
-      margin-bottom: 30px;
-    }
-
-    .detail-label {
-      display: block;
-      color: #F9A825;
-      font-size: 18px;
-      margin-bottom: 10px;
-    }
-
-    .detail-description {
-      display: block;
-      color: #FFF;
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
-
-    .detail-info {
-      color: #CCC;
-      font-size: 16px;
-      line-height: 1.5;
-    }
-
-    #request-info {
-      padding: 50px;
-      text-align: center;
-    }
-
-    #request-info h3 {
-      color: #F9A825;
-      font-size: 24px;
-      margin-bottom: 20px;
-    }
-
-    #contact-form {
-      max-width: 400px;
-      margin: 0 auto;
-    }
-
-    .form-group {
-      margin-bottom: 20px;
-    }
-
-    label {
-      display: block;
-      color: #F9A825;
-      font-size: 16px;
-      margin-bottom: 5px;
-    }
-
-    input[type="text"],
-    input[type="email"],
-    input[type="tel"],
-    textarea {
-      width: 100%;
-      padding: 10px;
-      border-radius: 4px;
-      border: none;
-      background-color: #FFF;
-      color: #333;
-      font-size: 16px;
-    }
-
-    textarea {
-      resize: vertical;
-      height: 120px;
-    }
-
-    .submit-btn {
-      background-color: #F9A825;
-      color: #FFF;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-
-    .submit-btn:hover {
-      background-color: #FFB74D;
-    }
-
-    footer {
-      background-color: #444;
-      padding: 20px;
-      text-align: center;
-    }
-
-    footer p {
-      margin: 0;
-      color: #FFF;
-    }
-  </style>
+  <link rel="stylesheet" href="price.css">
 </head>
 <body>
   <header>
-    <div>
-      <h1>Foxcraft Financial Coaching and Advising</h1>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-      </ul>
-    </nav>
+     <div class="logo">
+    <img src="vector-logo.png" alt="Foxcraft Financial Logo">
+  </div>
+  <div class="title">
+    <h1>Foxcraft Financial Coaching and Advising</h1>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+    </ul>
+  </nav>
   </header>
 
-  <section id="package-details" style="background-color: #333">
+  <section id="package-details" class="background-dark">
     <h2>Basic Package</h2>
     <ul>
       <li class="package-detail">
@@ -173,7 +50,7 @@
     </ul>
   </section>
 
-  <section id="request-info" style="background-color: #666">
+  <section id="request-info" class="background-gray">
     <h3>Securely submit some basic info and one of our team will reach out to you shortly.</h3>
     <form id="contact-form" action="https://formspree.io/f/xayzzgqo" method="post">
       <div class="form-group">
