--- a/index.html
+++ b/index.html
@@ -1,1 +1,171 @@
-<!DOCTYPE html><html><head><title>Foxcraft Financial</title><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="icon" href="vector-logo.ico" type="image/x-icon"><link rel="stylesheet" href="main.css"></head><body><div class="module"><header><div class="logo"><img src="vector-logo.png" alt="Foxcraft Financial Logo"></div><div class="title"><h1>Foxcraft Financial Coaching and Advising</h1></div><nav><input type="checkbox" id="menu-toggle"><label for="menu-toggle">&#9776;</label><ul><li><a href="#about">About</a></li><li><a href="#services">Services</a></li><li><a href="#pricing">Pricing</a></li><li><a href="#contact">Contact</a></li><li><a href="blog-page.html">Blog</a></li></ul></nav></header><div id="about"><div class="about-description narrow"><p>At Foxcraft Financial, we specialize in uncovering the money you may be losing to debt and other hidden costs, so you can secure a brighter financial future. Our mission is to empower individuals and families to regain control of their finances and make informed decisions to maximize their financial well-being.</p><p>Expert Guidance and Personalized Approach With our expert guidance and personalized approach, we assist you in navigating the complex landscape of personal finance. Our dedicated team of financial professionals is committed to equipping you with the knowledge and skills necessary to thrive financially.</p><p>Practical Solutions Beyond Coaching We understand the importance of reliable financial advice for everyone. That's why we provide accessible solutions that go beyond coaching, offering practical strategies to optimize your financial situation. Our experienced team will assess your current financial state, identify areas for improvement, and develop a tailored action plan to help you achieve financial success.</p><p>Comprehensive Support for Your Financial Journey Whether you need assistance with budgeting, debt management, investment strategies, or retirement planning, we are here to support you every step of the way. By leveraging our expertise, you can uncover hidden sources of wealth and redirect funds towards securing a prosperous future.</p><p>Take the First Step towards Financial Well-being Don't let debt and hidden costs drain your financial resources. Take the first step towards unlocking your financial future. Contact us today to schedule a consultation and embark on your journey towards financial well-being.</p></div></div><section id="pricing"><h2>Pricing</h2><div class="pricing-container"><div class="pricing-package"><h3>Basic Package</h3><ul><li>Initial Consultation: 30 minutes</li><li>Financial Analysis and Strategies: 1 hour</li><li>Financial Plan Delivery: Online</li><li>Follow-up Sessions: 1 session (30 minutes)</li><li>Email/Phone Support: 1 month</li></ul><p class="price">$99</p><a href="basic-package.html" class="btn">Select Package</a></div><div class="divider"></div><div class="pricing-package"><h3>Standard Package</h3><li>Initial Consultation: 30 minutes</li><li>Financial Analysis and Strategies: 1 hour</li><li>Financial Plan Delivery: In-person</li><li>Follow-up Sessions: 2 sessions (30 minutes each)</li><li>Email/Phone Support: 3 months</li><p class="price">$199</p><a href="standard-package.html" class="btn">Select Package</a></div><div class="divider"></div><div class="pricing-package"><h3>Premium Package</h3><li>Initial Consultation: 30 minutes</li><li>Financial Analysis and Strategies: 1 hour</li><li>Financial Plan Delivery: In-person</li><li>Follow-up Sessions: 4 sessions (30 minutes each)</li><li>Email/Phone Support: 6 months</li><li>Credit Score Analysis and Improvement Strategies</li><p class="price">$299</p><a href="premium-package.html" class="btn">Select Package</a></div><div class="divider"></div><div class="pricing-package"><h3>VIP Package</h3><li>Initial Consultation: 1 hour</li><li>Financial Analysis and Strategies: 2 hours</li><li>Financial Plan Delivery: In-person</li><li>Follow-up Sessions: 6 sessions (30 minutes each)</li><li>Email/Phone Support: 12 months</li><li>Credit Score Analysis and Improvement Strategies</li><li>Personalized Income Enhancement Strategies</li><li>Savings and Investment Recommendations</li><p class="price">$499</p><a href="vip-package.html" class="btn">Select Package</a></div></div></section><section id="contact"><h2>Contact</h2><div class="contact-info"><div class="contact-icon"><i class="fas fa-envelope"></i></div><div>Email: info@foxcraftfinancial.com</div></div><div class="contact-info"><div class="contact-icon"><i class="fas fa-phone"></i></div><div>Phone: (985) 205-1784</div></div></section><footer><p>&copy; 2023 Foxcraft Financial. All rights reserved.</p></footer></div></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Foxcraft Financial</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="vector-logo.ico" type="image/x-icon">
+  <link rel="stylesheet" href="main.css">
+</head>
+<body>
+    <section class="module">
+<header>
+  <div class="logo">
+    <img src="vector-logo.png" alt="Foxcraft Financial Logo">
+  </div>
+  <div class="title">
+    <h1>Foxcraft Financial Coaching and Advising</h1>
+  </div>
+  <nav>
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle">&#9776;</label>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#pricing">Pricing</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="blog-page.html">Blog</a></li>
+    </ul>
+  </nav>
+</header>
+<section id="about">
+
+    <p>At Foxcraft Financial, we specialize in uncovering the money you may be losing to debt and other hidden costs, so you can secure a brighter financial future. Our mission is to empower individuals and families to regain control of their finances and make informed decisions to maximize their financial well-being.</p>
+    <p>Expert Guidance and Personalized Approach With our expert guidance and personalized approach, we assist you in navigating the complex landscape of personal finance. Our dedicated team of financial professionals is committed to equipping you with the knowledge and skills necessary to thrive financially.</p>
+    <p>Practical Solutions Beyond Coaching We understand the importance of reliable financial advice for everyone. That's why we provide accessible solutions that go beyond coaching, offering practical strategies to optimize your financial situation. Our experienced team will assess your current financial state, identify areas for improvement, and develop a tailored action plan to help you achieve financial success.</p>
+    <p>Comprehensive Support for Your Financial Journey Whether you need assistance with budgeting, debt management, investment strategies, or retirement planning, we are here to support you every step of the way. By leveraging our expertise, you can uncover hidden sources of wealth and redirect funds towards securing a prosperous future.</p>
+    <p>Take the First Step towards Financial Well-being Don't let debt and hidden costs drain your financial resources. Take the first step towards unlocking your financial future. Contact us today to schedule a consultation and embark on your journey towards financial well-being.</p>
+  
+</section>
+  </section>  
+    <section class="module">
+<section id="services">
+  <h2>Services</h2>
+  <ul>
+    <li class="service-item">
+      <div class="service-icon">
+        <img src="image4.png" alt="Logo" class="logo-overlay">
+      </div>
+      <div>
+        <h3>Financial Goal Setting</h3>
+        <p>Helping clients define and prioritize their financial goals.</p>
+      </div>
+    </li>
+    <li class="service-item">
+      <div class="service-icon">
+        <img src="image2.png" alt="Logo" class="logo-overlay">
+      </div>
+      <div>
+        <h3>Debt Management</h3>
+        <p>Assisting clients in creating strategies to manage and eliminate debt.</p>
+      </div>
+    </li>
+    <li class="service-item">
+      <div class="service-icon">
+        <img src="image5.png" alt="Logo" class="logo-overlay">
+      </div>
+      <div>
+        <h3>Budgeting and Cash Flow Planning</h3>
+        <p>Teaching clients how to create and stick to a budget for effective cash flow management.</p>
+      </div>
+    </li>
+    <li class="service-item">
+      <div class="service-icon">
+        <img src="image6.png" alt="Logo" class="logo-overlay">
+      </div>
+      <div>
+        <h3>Investment Education</h3>
+        <p>Providing educational resources and guidance tailored to your financial goals and risk tolerance.</p>
+      </div>
+    </li>
+    <li class="service-item">
+      <div class="service-icon">
+        <img src="image1.png" alt="Logo" class="logo-overlay">
+      </div>
+      <div>
+        <h3>Retirement Planning</h3>
+        <p>Helping clients plan for a secure and comfortable retirement through proper savings and investment strategies.</p>
+      </div>
+    </li>
+  </ul>
+</section>
+        </section>
+    <section class="module">
+<section id="pricing">
+  <h2>Pricing</h2>
+  <div class="pricing-container">
+    <div class="pricing-package">
+      <h3>Basic Package</h3>
+      <ul>
+        <li>Initial Consultation: 30 minutes</li>
+        <li>Financial Analysis and Strategies: 1 hour</li>
+        <li>Financial Plan Delivery: Online</li>
+        <li>Follow-up Sessions: 1 session (30 minutes)</li>
+        <li>Email/Phone Support: 1 month</li>
+      </ul>
+      <p class="price">$99</p>
+      <a href="basic-package.html" class="btn">Select Package</a>
+    </div>
+    <div class="pricing-package">
+      <h3>Standard Package</h3>
+      <ul>
+        <li>Initial Consultation: 30 minutes</li>
+        <li>Financial Analysis and Strategies: 1 hour</li>
+        <li>Financial Plan Delivery: In-person</li>
+        <li>Follow-up Sessions: 2 sessions (30 minutes each)</li>
+        <li>Email/Phone Support: 3 months</li>
+      </ul>
+      <p class="price">$199</p>
+      <a href="standard-package.html" class="btn">Select Package</a>
+    </div>
+    <div class="pricing-package">
+      <h3>Premium Package</h3>
+      <ul>
+        <li>Initial Consultation: 30 minutes</li>
+        <li>Financial Analysis and Strategies: 1 hour</li>
+        <li>Financial Plan Delivery: In-person</li>
+        <li>Follow-up Sessions: 4 sessions (30 minutes each)</li>
+        <li>Email/Phone Support: 6 months</li>
+        <li>Credit Score Analysis and Improvement Strategies</li>
+      </ul>
+      <p class="price">$299</p>
+      <a href="premium-package.html" class="btn">Select Package</a>
+    </div>
+    <div class="pricing-package">
+      <h3>VIP Package</h3>
+      <ul>
+        <li>Initial Consultation: 1 hour</li>
+        <li>Financial Analysis and Strategies: 2 hours</li>
+        <li>Financial Plan Delivery: In-person</li>
+        <li>Follow-up Sessions: 6 sessions (30 minutes each)</li>
+        <li>Email/Phone Support: 12 months</li>
+        <li>Credit Score Analysis and Improvement Strategies</li>
+        <li>Personalized Income Enhancement Strategies</li>
+        <li>Savings and Investment Recommendations</li>
+      </ul>
+      <p class="price">$499</p>
+      <a href="vip-package.html" class="btn">Select Package</a>
+    </div>
+  </div>
+</section>
+<section id="contact">
+  <h2>Contact</h2>
+  <div class="contact-info">
+    <div class="contact-icon">
+      <i class="fas fa-envelope"></i>
+    </div>
+    <div>Email: info@foxcraftfinancial.com</div>
+  </div>
+  <div class="contact-info">
+    <div class="contact-icon">
+      <i class="fas fa-phone"></i>
+    </div>
+    <div>Phone: (985) 205-1784</div>
+  </div>
+</section>
+    </section>    
+<footer>
+  <p>&copy; 2023 Foxcraft Financial. All rights reserved.</p>
+</footer>
+    
+</body>
+</html>
