--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="module">
-  
-  
+  <div class="module-bg">
+  </div>
 
 
 <header>
@@ -171,5 +171,6 @@
   <p>&copy; 2023 Foxcraft Financial. All rights reserved.</p>
 </footer>
     </div>
+        
 </body>
 </html>
