--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@
       
 <section id="about">
 
-    <p>At Foxcraft Financial, we specialize in uncovering the money you may be losing to debt and other hidden costs, so you can secure a brighter financial future. Our mission is to empower individuals and families to regain control of their finances and make informed decisions to maximize their financial well-being.</p>
-    <p>Expert Guidance and Personalized Approach With our expert guidance and personalized approach, we assist you in navigating the complex landscape of personal finance. Our dedicated team of financial professionals is committed to equipping you with the knowledge and skills necessary to thrive financially.</p>
-    <p>Practical Solutions Beyond Coaching We understand the importance of reliable financial advice for everyone. That's why we provide accessible solutions that go beyond coaching, offering practical strategies to optimize your financial situation. Our experienced team will assess your current financial state, identify areas for improvement, and develop a tailored action plan to help you achieve financial success.</p>
-    <p>Comprehensive Support for Your Financial Journey Whether you need assistance with budgeting, debt management, investment strategies, or retirement planning, we are here to support you every step of the way. By leveraging our expertise, you can uncover hidden sources of wealth and redirect funds towards securing a prosperous future.</p>
-    <p>Take the First Step towards Financial Well-being Don't let debt and hidden costs drain your financial resources. Take the first step towards unlocking your financial future. Contact us today to schedule a consultation and embark on your journey towards financial well-being.</p>
+    Welcome to Foxcraft Financial! We specialize in helping you uncover hidden costs, manage debt, and achieve financial success. Our expert team provides personalized guidance and practical strategies to optimize your financial situation. Contact us today to take control of your finances and secure a brighter future.
   
 </section>
    
